--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html>
 
 <head>
-    <!-- SCROLLS -->
     <!-- boostrap/fontawesome CDNs -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" />
@@ -11,7 +9,7 @@
 </head>
 
 <body>
-    <!-- HEADER AND NAVBAR -->
+    <!-- header/nav -->
     <header>
         <nav class="navbar navbar-default">
             <div class="container">
@@ -26,9 +24,13 @@
             </div>
         </nav>
     </header>
+
+    <!-- Injected content goes here -->
     <div id="main">
 
     </div>
+
+
 </body>
 <!-- JS Libraries to be used -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
