set up grunt, begin working on canvas

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="scripts/css/main.css">
+    <link rel="stylesheet" type="text/css" href="scripts/bower_lib/bootstrap-css/css/bootstrap.min.css">
+    
     <title></title>
 </head>
 
