--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
 
 </html>
 
-
-<!--  <!DOCTYPE html>
+<!-- 
+<!DOCTYPE html>
 <meta charset="utf-8">
 <style>
 
@@ -43,7 +43,6 @@ var color = d3.scaleOrdinal(d3.schemeCategory20);
 
 var simulation = d3.forceSimulation()
     .force("link", d3.forceLink().id(function(d) { return d.id; }))
-    .force("charge", d3.forceManyBody())
     .force("center", d3.forceCenter(width / 2, height / 2));
 
 d3.json("scripts/test/miserables.json", function(error, graph) {
@@ -79,7 +78,6 @@ d3.json("scripts/test/miserables.json", function(error, graph) {
       .links(graph.links);
 
   function ticked() {
-  	console.log('tick');
     link
         .attr("x1", function(d) { return d.source.x; })
         .attr("y1", function(d) { return d.source.y; })
@@ -104,6 +102,7 @@ function dragged(d) {
 }
 
 function dragended(d) {
+  if (!d3.event.active) simulation.alphaTarget(0);
   d.fx = null;
   d.fy = null;
 }
