--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="scripts/css/main.css">
+    <link rel="stylesheet" type="text/css" href="scripts/css/ribbon.css">
     <link rel="stylesheet" type="text/css" href="scripts/bower_lib/bootstrap-css/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="scripts/bower_lib/font-awesome/css/font-awesome.min.css">
     <title></title>
