--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="src/scripts/css/main.css">
-    <link rel="stylesheet" type="text/css" href="src/scripts/css/ribbon.css">
-    <link rel="stylesheet" type="text/css" href="src/scripts/bower_lib/bootstrap-css/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="src/scripts/bower_lib/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="src/scripts/bower_lib/jQuery-contextMenu/dist/jquery.contextMenu.css">
+    <link rel="stylesheet" type="text/css" href="scripts/css/main.css">
+    <link rel="stylesheet" type="text/css" href="scripts/css/ribbon.css">
+    <link rel="stylesheet" type="text/css" href="scripts/bower_lib/bootstrap-css/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="scripts/bower_lib/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="scripts/bower_lib/jQuery-contextMenu/dist/jquery.contextMenu.css">
     <title></title>
 </head>
 
 <body>
-    <script data-main="src/scripts/main.js" src="src/scripts/bower_lib/requirejs/require.js"></script>
+    <script data-main="scripts/main.js" src="scripts/bower_lib/requirejs/require.js"></script>
 </body>
 
 </html>
