--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="scripts/css/ribbon.css">
     <link rel="stylesheet" type="text/css" href="scripts/bower_lib/bootstrap-css/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="scripts/bower_lib/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="scripts/bower_lib/jQuery-contextMenu/dist/jquery.contextMenu.css">
+    <link rel="stylesheet" type="text/css" href="scripts/bower_lib/jQuery-contextMenu/dist/jquery.contextMenu.min.css">
     <title></title>
 </head>
 
