--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
 <body>
     <script data-main="scripts/main.js" src="scripts/bower_lib/requirejs/require.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118905756-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-118905756-1');
+	</script>
 </body>
 
 </html>
